# aiudit

./: LICENSE  Notes.md  PROMPTS.md  README.md  package-lock.json  pyproject.toml  solc.json
aiudittool/: utils.py
aiudittool/agents/: structured_chat.py
aiudittool/cli/: main.py  solc.json
aiudittool/smart_contracts/: dnd_erc20_token-abi.json  dnd_erc20_token-bin  dnd_erc20_token.json  dnd_erc20_token.sol  erc20_token.sol  my_erc20_token-bin  my_erc20_token.json  my_erc20_token.sol
aiudittool/smart_contracts_test/: dnd_erc20_token_test_cases.sol  fuzzytest.sol  mythril_test_for_javacoin.sol
aiudittool/storage/: package-lock.json  package.json  put-files.js
aiudittool/tools/: __init__.py
aiudittool/tools/mythril_tool/: tool.py
aiudittool/tools/slither_test_analysis/: test.py  tool.py
aiudittool/tools/smart_contract_compiler/: test.py  tool.py
aiudittool/tools/smart_contract_deployer/: test.py  tool.py
aiudittool/tools/smart_contract_fuzzytester/: tool.py
aiudittool/tools/smart_contract_identifier/: tool.py
aiudittool/tools/smart_contract_tester/: tool.py
aiudittool/tools/smart_contract_writer/: test.py  tool.py
aiudittool/tools/view_test_tool_result/: tool.py
smart_contracts/: dnd_erc20_token-bin  dnd_erc20_token.json  dnd_erc20_token.sol  dnd_token-bin  dnd_token.json  dnd_token.sol  erc20_token.sol  erc721_preminted_nft.sol  javacoin-abi.json  javacoin-bin  javacoin.json  javacoin.sol  sample-abi.json  sample-bin  sample.json  sample.sol  test.sol
smart_contracts_test/: dnd_token_tests.sol
